website/versioned_docs/version-2.16.x/reference/subsystems/isort.mdx
---
title: isort
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Python import sorter tool (https://pycqa.github.io/isort/).

Backend: <span className="color--primary">`pants.backend.python.lint.isort`</span>

Config section: <span className="color--primary">`[isort]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]isort-skip`}
  env_repr="PANTS_ISORT_SKIP"
  default_repr={`False`}
>
  If true, don&#x27;t use isort when running `scie-pants-linux-x86_64 fmt` and
  `scie-pants-linux-x86_64 lint`.
</Option>

### `args`

<Option
  cli_repr={`--isort-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_ISORT_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to isort, e.g. `--isort-args='--case-sensitive
  --trailing-comma'`.
</Option>

## Advanced options

### `install_from_resolve`

<Option
  cli_repr={`--isort-install-from-resolve=<str>`}
  env_repr='PANTS_ISORT_INSTALL_FROM_RESOLVE'
  default_repr={`None`}
>
If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in [python].resolves, as described in https://www.pantsbuild.org/v2.16/docs/python-third-party-dependencies#user-lockfiles.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants.

If unspecified, and the `lockfile` option is set, the tool will use the custom `isort` &quot;tool lockfile&quot; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `requirements`

<Option
  cli_repr={`--isort-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_ISORT_REQUIREMENTS'
  default_repr={`[]`}
>
If install_from_resolve is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of python_requirement targets (or targets that generate or depend on python_requirement targets).

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--isort-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_ISORT_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.7,<4"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `console_script`

<Option
  cli_repr={`--isort-console-script=<str>`}
  env_repr="PANTS_ISORT_CONSOLE_SCRIPT"
  default_repr={`isort`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--isort-entry-point=<str>`}
  env_repr="PANTS_ISORT_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

### `config`

<Option
  cli_repr={`--isort-config="[<file_option>, <file_option>, ...]"`}
  env_repr='PANTS_ISORT_CONFIG'
  default_repr={`[]`}
>
Path to config file understood by isort (https://pycqa.github.io/isort/docs/configuration/config_files/).

Setting this option will disable `[isort].config_discovery`. Use this option if the config is located in a non-standard location.

If using isort 5+ and you specify only 1 config file, Pants will configure isort&#x27;s argv to point to your config file.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]isort-config-discovery`}
  env_repr='PANTS_ISORT_CONFIG_DISCOVERY'
  default_repr={`True`}
>
If true, Pants will include any relevant config files during runs (`.isort.cfg`, `pyproject.toml`, `setup.cfg`, `tox.ini` and `.editorconfig`).

Use `[isort].config` instead if your config is in a non-standard location.

</Option>

## Deprecated options

### `version`

<Option
  cli_repr={`--isort-version=<str>`}
  env_repr="PANTS_ISORT_VERSION"
  default_repr={`isort[pyproject,colors]>=5.9.3,<6.0`}
  removal_version="2.18.0.dev1"
  removal_hint={
    "Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles."
  }
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--isort-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_ISORT_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
  removal_version="2.18.0.dev1"
  removal_hint={
    "Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles."
  }
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `lockfile`

<Option
  cli_repr={`--isort-lockfile=<str>`}
  env_repr='PANTS_ISORT_LOCKFILE'
  default_repr={`<default>`}
  removal_version='2.18.0.dev0'
  removal_hint={'Custom tool versions are now installed from named resolves, as described at https://www.pantsbuild.org/v2.16/docs/python-lockfiles.<br /><br />1. If you have an existing resolve that includes the requirements for this tool,<br />    you can set `[isort].install_from_resolve = "<resolve name>".<br />    This may be the case if the tool also provides a runtime library, and you want<br />    to specify the version in just one place.<br />2. If not, you can set up a new resolve as described at the link above.<br /><br />Either way, the resolve you choose should provide the requirements currently set by the `version` and `extra-requirements` options for this tool, which you can see by running `pants help-advanced isort`.'}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.16.1rc4/src/python/pants/backend/python/lint/isort/isort.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `scie-pants-linux-x86_64 generate-lockfiles --resolve=isort`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `export`

<Option
  cli_repr={`--[no-]isort-export`}
  env_repr='PANTS_ISORT_EXPORT'
  default_repr={`True`}
  removal_version='2.18.0.dev0'
  removal_hint={'Use the export goal\'s --resolve option to select tools to export, instead of using this option to exempt a tool from export-by-default.'}
>
If true, export a virtual environment with isort when running `scie-pants-linux-x86_64 export`.

This can be useful, for example, with IDE integrations to point your editor to the tool&#x27;s binary.

</Option>

</span>

